processed/jira/txt/LU/LU-15956.txt
Key:        LU-15956
Summary:    lustre-client dkms build error with redefinition of ‘init_sk_module’
Link:       https://jira.whamcloud.com/browse/LU-15956
Type:       Bug
Priority:   Major
Status:     Resolved
Resolution: Fixed
Assignee:   Sebastien Buisson
Reporter:   Stephane Thiell
Created:    Fri, 17 Jun 2022 18:23:37 +0000
Updated:    Tue, 12 Jul 2022 23:11:54 +0000
Resolved:   Tue, 12 Jul 2022 23:11:54 +0000
Attachments: config.log, make.log

--- Environment ---
CentOS 7.9

--- Description ---
Hello!

We wanted to try to deploy a few Lustre 2.15.0 clients on a CentOS 7.9 cluster. While we were able to build the standard lustre/kmod RPMs without issue, we hit the following problem when installing the DKMS RPM.

Overview of the dkms rpm build process (from the Compiling Lustre Wiki page)

make distclean
sh ./autogen.sh
 ./configure --enable-dist --disable-server --enable-client
make dist
rpmbuild -bs --without servers lustre-dkms.spec
rpmbuild --rebuild --without servers /path/to/lustre-client-dkms(...).el7.src.rpm

The installation of the lustre-client-dkms RPM fails on CentOS 7.9 with the following errors:

/var/lib/dkms/lustre-client/2.15.0_1_g0a101e6/build/lustre/ptlrpc/gss/gss_sk_mech.c:946:12: error: redefinition of ‘init_sk_module’
 int __init init_sk_module(void)
            ^
In file included from /var/lib/dkms/lustre-client/2.15.0_1_g0a101e6/build/lustre/ptlrpc/gss/gss_crypto.h:6:0,
                 from /var/lib/dkms/lustre-client/2.15.0_1_g0a101e6/build/lustre/ptlrpc/gss/gss_sk_mech.c:44:
/var/lib/dkms/lustre-client/2.15.0_1_g0a101e6/build/lustre/ptlrpc/gss/gss_internal.h:544:19: note: previous definition of ‘init_sk_module’ was here
 static inline int init_sk_module(void) { return 0; }
                   ^
/var/lib/dkms/lustre-client/2.15.0_1_g0a101e6/build/lustre/ptlrpc/gss/gss_sk_mech.c:957:6: error: redefinition of ‘cleanup_sk_module’
 void cleanup_sk_module(void)
      ^
In file included from /var/lib/dkms/lustre-client/2.15.0_1_g0a101e6/build/lustre/ptlrpc/gss/gss_crypto.h:6:0,
                 from /var/lib/dkms/lustre-client/2.15.0_1_g0a101e6/build/lustre/ptlrpc/gss/gss_sk_mech.c:44:
/var/lib/dkms/lustre-client/2.15.0_1_g0a101e6/build/lustre/ptlrpc/gss/gss_internal.h:545:20: note: previous definition of ‘cleanup_sk_module’ was here
 static inline void cleanup_sk_module(void) { return; }
                    ^

 

Attaching dkms' build/ make.log where you can find the full log of the build error and build/ config.log (from /var/lib/dkms/lustre-client on the target client where the build fails).

GCC version: gcc version 4.8.5 20150623 (Red Hat 4.8.5-44) (GCC)

--- Comment (gerrit, Fri, 8 Jul 2022 05:27:35 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/47781/

Subject: LU-15956 gss: allow build without ssk

Project: fs/lustre-release

Branch: b2_15

Current Patch Set: 

Commit: e1906ae3dbb6b3291272fd8ba0ecbb9fd2425fbb

--- Comment (gerrit, Fri, 8 Jul 2022 05:26:47 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/47681/

Subject: LU-15956 gss: allow build without ssk

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 2e061e88a44db70e4446be567243a38a76ed5370

--- Comment (gerrit, Sat, 25 Jun 2022 00:42:56 +0000) ---
"Jian Yu " uploaded a new patch: https://review.whamcloud.com/47781

Subject: LU-15956 gss: allow build without ssk

Project: fs/lustre-release

Branch: b2_15

Current Patch Set: 1

Commit: 121b9aef3026f42d6093c9ae50981df84d47a2f9

--- Comment (sthiell, Tue, 21 Jun 2022 23:05:39 +0000) ---
Hi Sebastien,

With your patch, I cannot reproduce the issue anymore, even with krb5-devel installed. Thanks!

--- Comment (sebastien, Mon, 20 Jun 2022 13:01:06 +0000) ---
This looks like an issue with the GSS build system.

Stephane, could you please give a try to https://review.whamcloud.com/47681, and mark review +1 if this works for you?

Thanks!

--- Comment (gerrit, Mon, 20 Jun 2022 12:59:18 +0000) ---
"Sebastien Buisson " uploaded a new patch: https://review.whamcloud.com/47681

Subject: LU-15956 gss: allow build without ssk

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 06bd93125087d55aca9fe63bbca5553dd9e85748

--- Comment (pjones, Fri, 17 Jun 2022 18:52:19 +0000) ---
Stephane

Hats off to you for again being among the first to try a new major release. I think that this might be as simple as Centos7.9 is not a supported distro for clients because of the encryption feature

Sebastien

Could you please confirm/deny?

Thanks

Peter

--- Comment (sthiell, Fri, 17 Jun 2022 18:37:26 +0000) ---
FYI we found a workaround for this: disable gss and thus avoid the compilation error by removing the krb5-devel package from the node:

Indeed, there is a check in lustre-dkms_pre-build.sh:

rpm -qa | grep krb5-devel >/dev/null
if [ $? == 0 ] ; then
        GSS="--enable-gss"
else
        GSS="--disable-gss"
fi

It's one way we found to disable gss support for DKMS build. Then, the lustre client dkms rpm does work.
